syntax = "proto3";

package proto;

import "code.proto";

option java_generic_services = true;
option java_package = "net.coding.proto.platform.project";
option java_outer_classname = "ProjectDeployTokenProto";


enum InternalAccessType {
    UNKNOWN = 0;
    CODEDOG = 1;
    QTA = 2;
    QCI = 3;
}

message RefreshInternalAccessTokenRequest {
    int32 projectId = 1; //项目Id
    InternalAccessType accessType = 2; //类型
}

message RefreshInternalAccessTokenResponse {
    proto.common.Code code = 1;
    string message = 2;
    string accessGK = 3;
    string token = 4;
    int64 expiredAt = 5;
}

service ProjectDeployTokenService {
    rpc refreshInternalAccessToken (RefreshInternalAccessTokenRequest) returns (RefreshInternalAccessTokenResponse);
}